# training

./: .gitignore  deploy.sh  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/: app.py  init.py  test_script.py
src/api/: __init__.py
src/api/user/: __init__.py  endpoints.py
src/conf/: __init__.py
src/migrations/: env.py
src/migrations/versions/: 516439b76a8f_.py  7cf492dc6300_.py
src/model/: base.py  user.py
